--- a/style.css
+++ b/style.css
@@ -8,3 +8,20 @@
     list-style: none;
     text-decoration: none;
 }
+
+:root{
+  --main-color: orange;
+  --second-color: #edeae3;
+  --text-color: #1b1b1b;
+  --bg-color: #fff;
+
+  --box-shadow: 2px 2px 10px 14px rgb(14 55 54 / 15%);
+}
+
+img{
+    width: 100%;
+}
+
+body{
+    color: var(--text-color);
+}
