--- a/style.css
+++ b/style.css
@@ -251,3 +251,43 @@ header{
     transition-timing-function: linear;
     transition: 1s color linear;
 }
+
+.customers-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.5rem;
+    margin-top: 2rem;
+}
+
+.customers-container .box{
+    padding: 20px;
+    box-shadow: var(--box-shadow);
+    border-radius: 0.5rem;
+    text-align: center;
+}
+
+.customers-container .box p{
+    font-size: 0.938rem;
+}
+
+.customers-container .box h2{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin: 0.5rem 0 0.5rem;
+}
+
+.customers-container .box img{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.stars .bx{
+    color:var(--main-color);
+}
+
+.customers-container .box:hover{
+    background-color: var(--second-color);
+    transform: scale(105%);
+}
